tests/invalid/invalid_break.c
// FAIL
int main() {
    break;
    return 0;
}
